--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,7 +8,7 @@
 <div class="container py-5">
   <div class="d-flex align-items-center justify-content-between mb-3">
     <h3 class="mb-0">My Lists</h3>
-    <button type="button" class="btn btn-light"><%= link_to 'Create a movie list', new_list_path, class: 'btn btn-info' %></button>
+    <%= link_to 'Create a movie list', new_list_path, class: 'btn btn-info' %>
   </div>
   <div class="cards">
     <% @lists.each do |list| %>
