--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,9 @@
-<h1>Create a new list</h1>
+
+<div class="container pt-5">
+  <h1>Create a new list</h1>
   <%= simple_form_for @list do |f| %>
     <%= f.input :name%>
-    <%= f.submit class: 'btn btn-flat' %>
+   <%= f.submit class: 'btn btn-info'%>
   <% end %>
 
+</div>
