--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,7 @@
 
 <div class="position-relative">
   <div class=card-category card-large style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1505775561242-727b7fba20f0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80)">
+    <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
     <h1><%= @list.name %></h1>
   </div>
 </div>
